<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/ExpandedTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_header_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tv_title_movies"
                android:scaleType="centerCrop"
                android:src="@color/color_on_primary"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/appbar_padding">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.304"
                tools:progress="100" />

            <TextView
                android:id="@+id/tv_error_message"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_extrabold"
                android:text="@string/tv_try_again"
                android:textAlignment="center"
                android:textColor="@color/color_on_primary"
                android:textSize="24sp"
                android:visibility="invisible"
                app:drawableBottomCompat="@drawable/ic_baseline_refresh_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.303" />

            <TextView
                android:id="@+id/tv_release_date"
                style="@style/TitleContent"
                android:text="@string/tv_date"
                android:textColor="@color/color_on_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_genre"
                style="@style/TitleContent"
                android:text="@string/tv_genre"
                android:textColor="@color/color_on_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

            <ProgressBar
                android:id="@+id/ic_score"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:indeterminateOnly="false"
                android:progressDrawable="@drawable/ic_score"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre"
                tools:progress="60" />

            <TextView
                android:id="@+id/tv_score"
                style="@style/TitleScore"
                android:text="@string/tv_score"
                app:layout_constraintBottom_toBottomOf="@+id/ic_score"
                app:layout_constraintEnd_toEndOf="@+id/ic_score"
                app:layout_constraintStart_toStartOf="@+id/ic_score"
                app:layout_constraintTop_toTopOf="@+id/ic_score"
                tools:text="60%" />

            <TextView
                android:id="@+id/title_user_score"
                style="@style/TitleContent"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/title_score"
                app:layout_constraintBottom_toBottomOf="@+id/ic_score"
                app:layout_constraintStart_toEndOf="@+id/ic_score"
                app:layout_constraintTop_toTopOf="@+id/ic_score" />

            <ProgressBar
                android:id="@+id/ic_duration"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:indeterminateOnly="false"
                android:progress="100"
                android:progressDrawable="@drawable/ic_score"
                app:layout_constraintStart_toEndOf="@+id/title_user_score"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

            <TextView
                android:id="@+id/tv_duration"
                style="@style/TitleScore"
                android:text="@string/tv_duration"
                app:layout_constraintBottom_toBottomOf="@+id/ic_duration"
                app:layout_constraintEnd_toEndOf="@+id/ic_duration"
                app:layout_constraintStart_toStartOf="@+id/ic_duration"
                app:layout_constraintTop_toTopOf="@+id/ic_duration" />

            <TextView
                android:id="@+id/title_duration"
                style="@style/TitleContent"
                android:text="@string/title_duration"
                app:layout_constraintBottom_toBottomOf="@+id/ic_duration"
                app:layout_constraintStart_toEndOf="@+id/ic_duration"
                app:layout_constraintTop_toTopOf="@+id/ic_duration" />

            <TextView
                android:id="@+id/title_overview"
                style="@style/TitleContent"
                android:layout_marginTop="32dp"
                android:text="@string/title_overview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_score" />

            <TextView
                android:id="@+id/tv_overview"
                style="@style/Content"
                android:text="@string/lorem_ipsum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_overview" />

            <TextView
                android:id="@+id/title_cast"
                style="@style/TitleContent"
                android:layout_marginTop="32dp"
                android:text="@string/title_casting"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_cast1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_cast">

                <ImageView
                    android:id="@+id/img_cast1"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@color/color_on_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_artist1"
                style="@style/TitleContent"
                android:layout_width="88dp"
                android:maxLines="2"
                android:text="@string/tv_artist"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/cv_cast1"
                app:layout_constraintStart_toStartOf="@+id/cv_cast1"
                app:layout_constraintTop_toBottomOf="@+id/cv_cast1" />

            <TextView
                android:id="@+id/tv_cast1"
                style="@style/Content"
                android:layout_width="88dp"
                android:maxLines="2"
                android:text="@string/tv_casting_name"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/tv_artist1"
                app:layout_constraintStart_toStartOf="@+id/tv_artist1"
                app:layout_constraintTop_toBottomOf="@+id/tv_artist1" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_cast2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toEndOf="@+id/cv_cast1"
                app:layout_constraintTop_toBottomOf="@+id/title_cast">

                <ImageView
                    android:id="@+id/img_cast2"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@color/color_on_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_artist2"
                style="@style/TitleContent"
                android:layout_width="88dp"
                android:maxLines="2"
                android:text="@string/tv_artist"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/cv_cast2"
                app:layout_constraintStart_toStartOf="@+id/cv_cast2"
                app:layout_constraintTop_toBottomOf="@+id/cv_cast2" />

            <TextView
                android:id="@+id/tv_cast2"
                style="@style/Content"
                android:layout_width="88dp"
                android:maxLines="2"
                android:text="@string/tv_casting_name"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/tv_artist2"
                app:layout_constraintStart_toStartOf="@+id/tv_artist2"
                app:layout_constraintTop_toBottomOf="@+id/tv_artist2" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_cast3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cv_cast2"
                app:layout_constraintTop_toBottomOf="@+id/title_cast">

                <ImageView
                    android:id="@+id/img_cast3"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@color/color_on_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_artist3"
                style="@style/TitleContent"
                android:layout_width="88dp"
                android:maxLines="2"
                android:text="@string/tv_artist"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/cv_cast3"
                app:layout_constraintStart_toStartOf="@+id/cv_cast3"
                app:layout_constraintTop_toBottomOf="@+id/cv_cast3" />

            <TextView
                android:id="@+id/tv_cast3"
                style="@style/Content"
                android:layout_width="88dp"
                android:maxLines="2"
                android:text="@string/tv_casting_name"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/tv_artist3"
                app:layout_constraintStart_toStartOf="@+id/tv_artist3"
                app:layout_constraintTop_toBottomOf="@+id/tv_artist3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>